# CMakeList.txt : CMake project for nes-emulator, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (nes-emulator "nes-emulator.cpp" "nes-emulator.h")

# TODO: Add tests and install targets if needed.
